force-app/main/default/objects/Community_Site_Configuration__mdt/Community_Site_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>This custom metadata type stores configuration settings for community sites.  It helps streamline community management and ensures consistent settings across different sites. This can can be used all community related functionalities add fields accorddingly and use this</description>
    <label>Community Site Configuration</label>
    <pluralLabel>Community Site Configurations</pluralLabel>
</CustomObject>