force-app/main/default/objects/Community_Site_Configuration__mdt/fields/Additional_Configs__c.field-meta.xml
<CustomField>
    <fullName>Additional_Configs__c</fullName>
    <label>Additional Configs</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>