force-app/main/default/objects/Community_Site_Configuration__mdt/fields/Business_Hours_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_Hours_Name__c</fullName>
    <description>To store business hours name to used in the chat bot</description>
    <label>Business Hours Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>