force-app/main/default/objects/Community_Site_Configuration__mdt/fields/Config_Values__c.field-meta.xml
<CustomField>
    <fullName>Config_Values__c</fullName>
    <description>This field is used to hold the config values for any functionality</description>
    <label>Config Values</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>