force-app/main/default/objects/Community_Site_Configuration__mdt/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>To store the country name</description>
    <label>Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>