force-app/main/default/objects/Community_Site_Configuration__mdt/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <description>Default divison for user creation.</description>
    <label>Division</label>
    <length>50</length>
    <type>Text</type>
</CustomField>