force-app/main/default/objects/Community_Site_Configuration__mdt/fields/Email_Encoding__c.field-meta.xml
<CustomField>
    <fullName>Email_Encoding__c</fullName>
    <description>To store email encoding value</description>
    <label>Email Encoding</label>
    <length>50</length>
    <type>Text</type>
</CustomField>