force-app/main/default/objects/Community_Site_Configuration__mdt/fields/Functionality_Type__c.field-meta.xml
<CustomField>
    <fullName>Functionality_Type__c</fullName>
    <description>This picklist will contain the different functionalities to configure the data accordingly</description>
    <label>Functionality Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self Registration</fullName>
                <default>true</default>
                <label>Self Registration</label>
            </value>
            <value>
                <fullName>Einstein Bot</fullName>
            </value>
            <value>
                <fullName>Messaging Survey</fullName>
            </value>
            <value>
                <fullName>WhatsApp Survey</fullName>
            </value>
            <value>
                <fullName>Support Experience Survey</fullName>
            </value>
            <value>
                <fullName>Country Picker</fullName>
            </value>
            <value>
                <fullName>Orders_Invoice</fullName>
                <isActive>false</isActive>
                <label>Orders_Invoice</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>