force-app/main/default/objects/Community_Site_Configuration__mdt/fields/Survey_Id__c.field-meta.xml
<CustomField>
    <fullName>Survey_Id__c</fullName>
    <label>Survey Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>