force-app/main/default/objects/Community_Site_Configuration__mdt/fields/Timezone__c.field-meta.xml
<CustomField>
    <fullName>Timezone__c</fullName>
    <description>To store the TimeZone for respective country</description>
    <label>Timezone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>