force-app/main/default/objects/Community_Site_Configuration__mdt/fields/Where_is_this_used__c.field-meta.xml
<CustomField>
    <fullName>Where_is_this_used__c</fullName>
    <description>This field captures where does this custom metadata record is used in Salesforce.</description>
    <label>Where is this used?</label>
    <type>TextArea</type>
</CustomField>